--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"
     ></script>
+
+    <script
+    src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+    data-auto-a11y="true"
+  ></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
