codeddit deploy with meta tag refactor

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,13 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Meta Tags     -->
+    <meta property="og:title" content="Codeddit : FREE Course , FREE Books , FREE Projects with Source Code">
+    <meta property="og:description" content="Codeddit is a community of programmers , it provides lot of FREE Course and Study matarials for coding">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://codeddit.com/">
+    <meta property="og:image" content="https://firebasestorage.googleapis.com/v0/b/codeddit.appspot.com/o/codeddit_post%2FFree%20Courses.gif?alt=media&token=724663c5-b101-48e6-983e-4c67861c75c5"/>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
